# phazr

./: .gitignore  README.md  phazr-cli  pyproject.toml  pytest.ini  test-phazr.yaml  tox.ini
.github/workflows/: test.yml
examples/: dynamic-phases.yaml  local-only.yaml  microservices.yaml  simple-phases.yaml  simple-setup.yaml
phazr/: __init__.py  cli.py  config.py  display.py  executor.py  handlers.py  models.py  validators.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/fixtures/configs/: complex-dag.yaml  error-scenarios.yaml  kubernetes.yaml  minimal.yaml  multi-version.yaml  simple.yaml
tests/fixtures/scripts/: test_script.sh
tests/integration/: test_orchestrator.py
tests/unit/: test_config.py  test_display.py  test_executor.py  test_handlers.py  test_models.py  test_validators.py
tests/utils/: test_helpers.py
